# RhysLang4

./: .gitignore  Makefile  RhysLang  casm.pl  cdisasm.pl  core  generator.go  go.mod  grammar.marpa  in.rl  lexer.go  main.pl  mugo.go  out.com  out.rba.bak  out.txt  parser.go  preprocess.pl  shell.nix  stdlib.nasm  tcvm
compiler/: build.sbt  make_ast.pl
compiler/.bsp/: sbt.json
compiler/src/main/scala/: Compiler.scala
compiler/src/main/scala/generator/: Generator.scala  PrettyPrinter.scala  Scope.scala  Variable.scala
compiler/src/main/scala/lexer/: Lexer.scala  Token.scala  TokenType.scala
compiler/src/main/scala/node/: AST.scala  Add.scala  Asm.scala  Assign.scala  Block.scala  Call.scala  Comparison.scala  Divide.scala  Equal.scala  Equality.scala  Expression.scala  Factor.scala  Function.scala  Grouping.scala  Id.scala  If.scala  Index.scala  Multiply.scala  My.scala  Not.scala  NotEqual.scala  NullLiteral.scala  Number.scala  NumberLiteral.scala  Operators.scala  Return.scala  StringLiteral.scala  Subtract.scala  Term.scala  Unary.scala  Var.scala  While.scala
lib/: Asm.pm  Keywords.pm  Lexer.pm  Parser.pm  Registers_x86_16.pm  Registers_x86_32.pm  Registers_x86_64.pm  Scope.pm  Token.pm  Visitor.pm
stdlib/: file.rl  stdio.rl  stdlib.dos.x86_16.nasm  stdlib.linux.x86_64.nasm  stdlib.rl
stdlib/stdlib/: darwin.x86_64.rl  dos.x86_16.rl  linux.x86_64.rl
tests/: hello.go
vm/: CMakeLists.txt  Makefile  builtins.c  builtins.h  compile.pl  cvm.c  cvm.h  defs.h  main.c  ops.h  tcvm.c  tcvm.c.bak  test.pl  types.h  vm.pl
(+4 files in other folders)
